<resources>
    <string name="app_name">Guide_Touristique</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chipAlllpharmacies">Tout</string>
    <string name="chipClosePharmacies">Proche</string>
    <string name="chipAllmosquees">Tout</string>
    <string name="chipclosermosquees">Proche</string>
    <string name="chipAllhopspitals">Tout</string>
    <string name="publichospitals">Publique</string>
    <string name="privateHospitals">Privé</string>
    <string name="prochehospitals">Proche</string>
    <string name="besthospitals">Meilleur</string>
</resources>