<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HopitauxFragment"
    android:id="@+id/hopital_layout"
    tools:ignore="InvalidId">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="743dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/hopital_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="397dp"
            android:layout_height="65dp"
            android:layout_marginLeft="-3dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="66dp"
                android:layout_height="107dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/HOME"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_home" />
            </LinearLayout>


            <com.google.android.material.chip.Chip
                android:id="@+id/CHIPALL"
                android:layout_width="97dp"
                android:layout_height="61dp"
                android:layout_marginLeft="18dp"
                android:checkable="true"
                android:text="@string/chipAllhopspitals"
                android:textAlignment="2"
                app:chipIcon="@drawable/t"
                app:iconStartPadding="3dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/publicc"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginLeft="5dp"
                android:checkable="true"
                android:text="@string/publichospitals"
                android:textAlignment="4"
                app:chipIcon="@drawable/publiccicon"
                app:iconStartPadding="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/prive"
                android:layout_width="94dp"
                android:layout_height="61dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="13dp"
                android:checkable="true"
                android:text="@string/privateHospitals"
                android:textAlignment="4"
                app:chipIcon="@drawable/priveeicon"
                app:iconStartPadding="1dp"

                />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="291dp"
            android:layout_height="1dp"
            android:layout_marginLeft="80dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="376dp"
            android:layout_height="63dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <com.google.android.material.chip.Chip
                android:id="@+id/ditance"
                android:layout_width="107dp"
                android:layout_height="61dp"
                android:layout_marginLeft="55dp"
                android:checkable="true"
                android:text="@string/prochehospitals"
                android:textAlignment="4"
                app:chipIcon="@drawable/distanceeicon"
                app:iconStartPadding="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rating"
                android:layout_width="115dp"
                android:layout_height="61dp"
                android:layout_marginLeft="5dp"
                android:checkable="true"
                android:text="@string/besthospitals"
                android:textAlignment="4"
                app:chipIcon="@drawable/ratingggicon"
                app:iconStartPadding="2dp" />

        </LinearLayout>


        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hopita_list"
            android:layout_width="364dp"
            android:layout_height="492dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp" />


    </LinearLayout>
    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:id="@+id/progress_bar"
        android:indeterminateTint="@color/colorPrimary"
        />

</FrameLayout>